refcator swagger
